--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,17 @@ beautifulsoup4==4.10.0
 bs4==0.0.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
+filelock==3.6.0
+gdown==4.4.0
 idna==3.3
 lxml==4.8.0
 mutagen==1.45.1
 pycryptodomex==3.14.1
+PySocks==1.7.1
 requests==2.27.1
+six==1.16.0
 soupsieve==2.3.1
+tqdm==4.62.3
 urllib3==1.26.8
 websockets==10.2
 yt-dlp==2022.2.4
